--- a/templates/userDetails.html
+++ b/templates/userDetails.html
@@ -1,7 +1,121 @@
-<form class="" action="" method="post">
-  Full Name : <input type="text" name="name" value=""><br> <br>
-<!--  Branch : <input type="text" name="branch" value=""><br><br> -->
-  Branch :  <select name="dept">
+<!DOCTYPE html>
+<html lang="zxx">
+   <head>
+      <title>Book Store</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="keywords" content="Toys Shop Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+         Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+      <script>
+         addEventListener("load", function () {
+         	setTimeout(hideURLbar, 0);
+         }, false);
+         
+         function hideURLbar() {
+         	window.scrollTo(0, 1);
+         }
+      </script>
+     <link href="{{url_for('static' , filename = 'css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" media="all">
+      <!--//booststrap end-->
+      <!-- font-awesome icons -->
+      <link href="{{url_for('static' , filename = 'css/fontawesome-all.min.css')}}" rel="stylesheet" type="text/css" media="all">
+      <!-- //font-awesome icons -->
+      <!--Shoping cart-->
+      <link rel="stylesheet" href="{{url_for('static' , filename = 'css/shop.css')}}" type="text/css" />
+      <!--//Shoping cart-->
+      <!--stylesheets-->
+      <link href="{{url_for('static' , filename = 'css/style.css')}}" rel='stylesheet' type='text/css' media="all">
+      <!--//stylesheets-->
+      <link href="//fonts.googleapis.com/css?family=Sunflower:500,700" rel="stylesheet">
+      <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+   </head>
+   <body>
+       <form class="" action="" method="post">
+
+      <!--headder-->
+      <div class="header-outs" id="home">
+      <div class="header-bar">
+      
+         <div class="container-fluid">
+            <div class="hedder-up row">
+               <div class="col-lg-3 col-md-3 logo-head">
+                  <h1><a class="navbar-brand" href="index.html">Book Store</a></h1>
+               </div>
+               <div class="col-lg-5 col-md-6 search-right">
+                  <form class="form-inline my-lg-0">
+                     <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                     <button class="btn" type="submit">Search</button>
+                  </form>
+               </div>
+            
+            </div>
+         </div>
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+               <ul class="navbar-nav ">
+                  <li class="nav-item ">
+                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="about.html" class="nav-link">About</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="service.html" class="nav-link">Service</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="shop.html" class="nav-link">Shop Now</a>
+                  </li>
+
+
+                  <li class="nav-item">
+                     <a href="contact.html" class="nav-link">Contact</a>
+                  </li>
+               </ul>
+            </div>
+          </nav>
+      </div>
+	  </div>
+      <!--//headder-->
+      <!-- banner -->
+      <div class="inner_page-banner one-img">
+      </div>
+      <!--//banner -->
+      <!-- short -->
+      <div class="using-border py-3">
+         <div class="inner_breadcrumb  ml-4">
+            <ul class="short_ls">
+               <li>
+                  <a href="index.html">Home</a>
+                  <span>/ /</span>
+               </li>
+               <li>Typography</li>
+            </ul>
+         </div>
+      </div>
+      <!-- //short-->
+      <!--//banner -->
+      <!--Typography-->
+      <section class="inner-pages py-5">
+         <div class="container py-xl-5 py-sm-3">
+            <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Typography</h3>
+            <!-- forms -->
+            <section class="typo-section py-4 border-top border-bottom">
+               <h3 class="typo-main-heading mb-lg-4 mb-3 pr-3 pb-1">Form</h3>
+               <!-- form1 -->
+               <form>
+                  <div class="form-row">
+                     <div class="form-group col-md-6">
+                        <label for="inputEmail4">Name</label>
+                         
+                        <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
+                     </div>
+                     </div>
+                  
+                  <div class="form-group">
+                      Branch :  <select name="dept">
   <option value="AS">Aero Space</option>
   <option value="BT">Bio Technology</option>
   <option value="CE">Chemical Engineering</option>
@@ -13,7 +127,72 @@
   <option value="EE">Electrical and Electonics</option>
   <option value="MCA">Master in Computer Application</option>
   <option value="TE">Telecommunicaton Engineering</option>
-</select>
-  <input type="submit" name="submit" value="submit">
+</select><br>
+                      <label for="phonenum">Phone Number (format: xxxx-xxx-xxx):</label><br/>
+  <input id="phonenum" type="tel" pattern="^\d{4}-\d{3}-\d{3}$" required >
 
-</form>
+
+                    
+                  <button type="submit" name="submit" value="submit" class="btn btn-primary">Submit</button>
+               </form>
+               <!--// form1 -->
+               <!-- form2 -->
+               <!--// form2 -->
+            </section>
+            <!--// forms -->
+      <script src='js/jquery-2.2.3.min.js'></script>
+      <!--//js working-->
+      <!-- cart-js -->
+      <script src="js/minicart.js"></script>
+      <script>
+         toys.render();
+         
+         toys.cart.on('toys_checkout', function (evt) {
+         	var items, len, i;
+         
+         	if (this.subtotal() > 0) {
+         		items = this.items();
+         
+         		for (i = 0, len = items.length; i < len; i++) {}
+         	}
+         });
+      </script>
+      <!-- //cart-js -->
+      <!-- start-smoth-scrolling -->
+      <script src="js/move-top.js"></script>
+      <script src="js/easing.js"></script>
+      <script>
+         jQuery(document).ready(function ($) {
+         	$(".scroll").click(function (event) {
+         		event.preventDefault();
+         		$('html,body').animate({
+         			scrollTop: $(this.hash).offset().top
+         		}, 900);
+         	});
+         });
+      </script>
+      <!-- start-smoth-scrolling -->
+      <!-- here stars scrolling icon -->
+      <script>
+         $(document).ready(function () {
+         
+         	var defaults = {
+         		containerID: 'toTop', // fading element id
+         		containerHoverID: 'toTopHover', // fading element hover id
+         		scrollSpeed: 1200,
+         		easingType: 'linear'
+         	};
+         
+         
+         	$().UItoTop({
+         		easingType: 'easeOutQuart'
+         	});
+         
+         });
+      </script>
+      <!-- //here ends scrolling icon -->
+      <!--bootstrap working-->
+      <script src="js/bootstrap.min.js"></script>
+      <!-- //bootstrap working-->      <!-- //OnScroll-Number-Increase-JavaScript -->
+   </body>
+</html>
