--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,77 +1,90 @@
+<html lang="zxx">
+<head>
+   <title>Book Store</title>
+   <!--meta tags -->
 
-<html>
-   <head>
-      <title>Book Store</title>
-      <script>
-         addEventListener("load", function () {
-         	setTimeout(hideURLbar, 0);
-         }, false);
+   <script>
+      addEventListener("load", function () {
+       setTimeout(hideURLbar, 0);
+      }, false);
 
-         function hideURLbar() {
-         	window.scrollTo(0, 1);
-         }
-      </script>
-      <!--//meta tags ends here-->
-      <!--booststrap-->
-      <link href="{{url_for('static' , filename = 'css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" media="all">
-      <!--//booststrap end-->
-      <!-- font-awesome icons -->
-      <link href="{{url_for('static' , filename = 'css/fontawesome-all.min.css')}}" rel="stylesheet" type="text/css" media="all">
-      <!-- //font-awesome icons -->
-      <!--Shoping cart-->
-      <link rel="stylesheet" href="{{url_for('static' , filename = 'css/shop.css')}}" type="text/css" />
-      <!--//Shoping cart-->
-      <!--stylesheets-->
-      <link href="{{url_for('static' , filename = 'css/style.css')}}" rel='stylesheet' type='text/css' media="all">
-      <!--//stylesheets-->
-      <link href="//fonts.googleapis.com/css?family=Sunflower:500,700" rel="stylesheet">
-      <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-   </head>
-   <body>
-      <!--headder-->
-      <div class="header-outs" id="home">
-         <div class="header-bar">
-               <div class="container-fluid">
-               <div class="hedder-up row">
-                  <div class="col-lg-3 col-md-3 logo-head">
-                     <h1><a class="navbar-brand" href="index.html">Book-Store</a></h1>
-                  </div>
-                  <div class="col-lg-5 col-md-6 search-right">
-                     <form class="form-inline my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                        <button class="btn" type="submit">Search</button>
-                     </form>
-                  </div>
-                </div>
-            </div>
-             <nav class="navbar navbar-expand-lg navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-               <ul class="navbar-nav ">
-                  <li class="nav-item ">
-                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="about.html" class="nav-link">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="service.html" class="nav-link">Service</a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="shop.html" class="nav-link">Shop Now</a>
-                  </li>
+      function hideURLbar() {
+       window.scrollTo(0, 1);
+      }
+   </script>
+   <!--//meta tags ends here-->
+   <!--booststrap-->
+   <link href="{{ url_for('static' , filename='css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" media="all">
+   <!--//booststrap end-->
+   <!-- font-awesome icons
+
+<link href="{{url_for('static' , filename = 'css/flexslider.css')}}" rel="stylesheet" type="text/css" media="all">
+  -->
 
 
-                  <li class="nav-item">
-                     <a href="contact.html" class="nav-link">Contact</a>
-                  </li>
-               </ul>
-            </div>
-         </nav></div>
-		  </div>
-         <!--//headder-->
+   <link href="{{url_for('static' , filename = 'css/fontawesome-all.min.css')}}" rel="stylesheet" type="text/css" media="all">
+   <!-- //font-awesome icons -->
+   <!-- For Clients slider -->
+   <link rel="stylesheet"href="{{url_for('static' , filename = 'css/flexslider.css')}}" type="text/css" media="all" />
+   <!--flexs slider-->
+   <link href="css/JiSlider.css" rel="stylesheet">
+   <!--Shoping cart-->
+   <link rel="stylesheet" href="{{url_for('static' , filename = 'css/shop.css')}}" type="text/css" />
+   <!--//Shoping cart-->
+   <!--stylesheets-->
+   <link href="{{url_for('static' , filename = 'css/style.css')}}" rel='stylesheet' type='text/css' media="all">
+   <!--//stylesheets-->
+   <link href="//fonts.googleapis.com/css?family=Sunflower:500,700" rel="stylesheet">
+   <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+</head>
+<body>
+   <!--headder-->
+   <div class="header-outs" id="home">
+   <div class="header-bar">
+
+      <div class="container-fluid">
+         <!-- <div class="hedder-up row">
+            <div class="col-lg-3 col-md-3 logo-head">
+               <h1><a class="navbar-brand" href="index.html">Book Store</a></h1>
+            </div> -->
+
+         </div>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
+               <li class="nav-item ">
+                  <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item">
+                  <a href="about.html" class="nav-link">About</a>
+               </li>
+
+               <li class="nav-item active">
+                  <a href="/asd" class="nav-link">Shop Now</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/sell"   >
+                  Sell Book
+                  </a>
+
+               </li>
+
+
+               <li class="nav-item">
+                  <a href="/addcart" class="nav-link">{{name}}</a>
+               </li>
+               <li class="nav-item">
+                  <a href="/logout" class="nav-link">Logout</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+   </div>
+ </div>         <!--//headder-->
          <!-- banner -->
          <div class="inner_page-banner one-img">
          </div>
