--- a/templates/dashboardsLogedIn.html
+++ b/templates/dashboardsLogedIn.html
@@ -76,7 +76,7 @@
 
 
                   <li class="nav-item">
-                     <a href="#" class="nav-link">{{name}}</a>
+                     <a href="/addcart" class="nav-link">{{name}}</a>
                   </li>
                   <li class="nav-item">
                      <a href="/logout" class="nav-link">Logout</a>
@@ -167,7 +167,7 @@
                                                        <form action="bookDetails" method="get">
                                                        <input type="submit" name="book" value="{{b[0]}}">
                                                        </form>
- 
+
 
 
 
